--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-    <mat-sidenav>
+    <mat-sidenav [opened]="true">
         <app-sidebar></app-sidebar>
     </mat-sidenav>
     <mat-sidenav-content>
