--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,11 +1,10 @@
 <mat-nav-list>
 
-  <a mat-list-item [routerLink]="'/accounts'"> Accounts </a>
-  <a mat-list-item [routerLink]="'/create-account'"> Create Account </a>
-  <a mat-list-item [routerLink]="'/contacts'"> Contacts </a>
-  <a mat-list-item [routerLink]="'/create-contact'"> Create Contact </a>
-  <a mat-list-item [routerLink]="'/activities'"> Activities </a>
-  <a mat-list-item [routerLink]="'/create-activity'"> Create Activity </a>
-<!--  <a mat-list-item (click)="sidenav.toggle()" href="" mat-list-item>Close</a>-->
+    <div class="closeSidenav">
+        <button mat-icon-button (click)="closeSidenav()">
+            <mat-icon>clear</mat-icon>
+        </button>
+    </div>
+    <a mat-list-item [routerLink]="'admin/dashboard'"> Dashboard </a>
 
 </mat-nav-list>
