Added al website images, subject service, fixed login/register dialogs switch

--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,3 +1,65 @@
-<p>
-  login works!
-</p>
+<div>
+    <mat-dialog-content class="mat-typography">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="logo_and_close">
+                    <button type="button" class="close" #closest data-dismiss="modal" mat-dialog-close
+                            aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h5 class="modal-title" id="exampleModalLongTitle">
+                        <img src="assets/images/logo_white_background.jpg" alt="">
+                    </h5>
+                </div>
+                <div class="modal-body">
+<!--                    <app-face-login [hidden]="true"></app-face-login>-->
+                    <form action="" method="post" [formGroup]="loginForm" #f>
+                        <div class="form-group">
+                            <div class="example-full-width">
+                                <mat-form-field class="login-inp">
+                                    <input matInput placeholder="Email" name="email" formControlName="email">
+                                </mat-form-field>
+                                <mat-error
+                                        *ngIf="loginForm.get('email').hasError('email') && loginForm.get('email').touched">
+                                    Please enter a valid email address
+                                </mat-error>
+                                <mat-error
+                                        *ngIf="submitted && loginForm.get('email').hasError('required')">
+                                    Email is <strong>required</strong>
+                                </mat-error>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="example-full-width">
+                                <mat-form-field class="login-inp">
+                                    <input matInput type="password" placeholder="Password" name="password"
+                                           formControlName="password">
+                                </mat-form-field>
+                                <mat-error
+                                        *ngIf="submitted && loginForm.get('password').hasError('required')">
+                                    Password is <strong>required</strong>
+                                </mat-error>
+                            </div>
+                        </div>
+                        <button class="login"
+                                mat-raised-button (click)="authenticate(userLoginInf)" color="primary">Login
+                        </button>
+                        <button (click)="openForgotPass()" class="forgot_pass" mat-icon-button mat-dialog-close>Forgot
+                            Password?
+                        </button>
+                    </form>
+                    <div class="have_account">
+                        <button class="dont_have_account" mat-dialog-close (click)="showRegister()">Don’t have an
+                            account yet?
+                        </button>
+                        <button class="yourButton" mat-dialog-close (click)="showRegister()">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-dialog-content>
+</div>
+<!--<mat-dialog-actions align="end">-->
+<!--    <button mat-button mat-dialog-close>Cancel</button>-->
+<!--    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>-->
+<!--</mat-dialog-actions>-->
