--- a/src/app/core/components/register/register.component.html
+++ b/src/app/core/components/register/register.component.html
@@ -1,3 +1,69 @@
-<p>
-  register works!
-</p>
+<div>
+    <mat-dialog-content class="mat-typography">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="logo_and_close">
+                    <button type="button" #close class="close" data-dismiss="modal" mat-dialog-close aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h5 class="modal-title" id="exampleModalLongTitle">
+                        <img src="assets/images/logo_white_background.jpg" alt="">
+                    </h5>
+                </div>
+                <div class="modal-body">
+                    <form action="" method="post" [formGroup]="registerForm">
+                        <div class="form-group">
+                            <div class="example-full-width">
+                                <mat-form-field class="login-inp">
+                                    <input matInput placeholder="Email Address" formControlName="email">
+                                    <!--                  <mat-error-->
+                                    <!--                          *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">-->
+                                    <!--                    Please enter a valid email address-->
+                                    <!--                  </mat-error>-->
+                                    <!--                  <mat-error *ngIf="emailFormControl.hasError('required')">-->
+                                    <!--                    Email is <strong>required</strong>-->
+                                    <!--                  </mat-error>-->
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="example-full-width">
+                                <mat-form-field class="login-inp">
+                                    <input matInput placeholder="Full Name" name="name" formControlName="name">
+                                    <!--                  <mat-error-->
+                                    <!--                          *ngIf="nameFormControl.hasError('name') && !nameFormControl.hasError('required')">-->
+                                    <!--                    Please enter a valid email address-->
+                                    <!--                  </mat-error>-->
+                                    <!--                  <mat-error *ngIf="nameFormControl.hasError('required')">Name is-->
+                                    <!--                    <strong>required</strong></mat-error>-->
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="example-full-width">
+                                <!--[floatLabel]="'never'"-->
+                                <mat-form-field class="login-inp">
+                                    <input matInput type="password" placeholder="Password"
+                                           name="pass">
+                                    <mat-hint class="passHint">At least one capital letter and number</mat-hint>
+                                    <!--                  <mat-error *ngIf="passFormControl.hasError('required')">-->
+                                    <!--                    Password is <strong>required</strong>-->
+                                    <!--                  </mat-error>-->
+                                </mat-form-field>
+                            </div>
+                        </div>
+                        <!--[disabled]="passFormControl.hasError('required') || (emailFormControl.hasError('email') || emailFormControl.hasError('required'))"-->
+                        <button mat-raised-button (click)="register()" class="login">Sign up</button>
+                    </form>
+                    <div class="have_account">
+                        <button class="dont_have_account" mat-dialog-close #loginButt (click)="showLogin()">
+                            Already have an account?
+                        </button>
+                        <button class="login_btn" mat-dialog-close mat-button (click)="showLogin()">Login</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-dialog-content>
+</div>
+<!--    <button class="btn btn-danger" (click)="signOut()">Sign out</button>-->
