Added http request interceptor, ngx-toastr

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -11,8 +11,8 @@
 //@import "~primeng/resources/primeng.min.css";
 //@import "~ngx-owl-carousel-o/lib/styles/scss/owl.carousel";
 //@import "~ngx-owl-carousel-o/lib/styles/scss/owl.theme.default";
-//// regular style toast
-//@import '~ngx-toastr/toastr';
+// regular style toast
+@import '~ngx-toastr/toastr';
 //// ngx-share buttons styles
 //@import '~@ngx-share/button/themes/material/material-light-theme';
 
